--- a/mapstruct/pom.xml
+++ b/mapstruct/pom.xml
@@ -30,7 +30,7 @@
 			<optional>true</optional>
 		</dependency>
 
-		<!-- 2 -->
+		<!-- 2 contains the required annotations such as @Mapping-->
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
@@ -83,6 +83,7 @@
 							<artifactId>lombok</artifactId>
 							<version>${lombok.version}</version>
 						</path>
+						<!-- contains the annotation processor which generates mapper implementations -->
 						<path>
 							<groupId>org.mapstruct</groupId>
 							<artifactId>mapstruct-processor</artifactId>
